fent upvoted submissions. falten els mssg d'error
